--- a/public/sites/all/themes/gesso/sass/panels-admin/detail.scss
+++ b/public/sites/all/themes/gesso/sass/panels-admin/detail.scss
@@ -1,5 +1,5 @@
 // @file
-// Admin syles for Panels layout: sidebar
+// Admin syles for Panels layout: Detail
 
 $panels-admin: true;
 
@@ -10,4 +10,4 @@ $legacy-support-for-ie8: false;
 $legacy-support-for-mozilla: false;
 
 @import '../partials/global';
-@import '../partials/layout/panels/sidebar';
+@import '../partials/layout/panels/detail';
