updated theme with patternlab styles

--- a/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
+++ b/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
@@ -339,6 +339,7 @@ ul {
       list-style: none;
       list-style-position: outside;
       margin: 0;
+      padding-bottom: 0.5em;
       padding-left: 17px;
       position: relative;
       &:before {
