--- a/public/sites/all/themes/gesso/sass/partials/components/view/_view--innovation-counters.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/view/_view--innovation-counters.scss
@@ -1,5 +1,5 @@
 %view--innovation-counters__icon-field {
-  font-size: em(14px);
+  //font-size: em(14px);
   padding: 0 0 1em 35px;
   position: relative;
   &:before {
@@ -12,6 +12,7 @@
 }
 
 .view--innovation-counters {
+  overflow: hidden;
   padding-left: 1.5em;
   .view__attachment-after {
     .view {
