--- a/patternlab/source/sass/partials/components/pane/_pane--like-this-innovation.scss
+++ b/patternlab/source/sass/partials/components/pane/_pane--like-this-innovation.scss
@@ -1,3 +1,19 @@
 .pane--like-this-innovation {
   background: $gray url(../images/background--lightbulb.png) no-repeat 100% 0;
+  padding: 1em;
+  .pane__title {
+    border: 0;
+    color: $primary-text-color;
+    font-size: em(16px);
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+  }
+  .pane__content {
+    padding: 0;
+    p {
+      font-size: em(14px);
+    }
+  }
 }
