fix for padding on innovation detail

--- a/patternlab/source/_patterns/01-molecules/04-panes/favorite-innovation@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/favorite-innovation@inprogress.mustache
@@ -1,4 +1,4 @@
-<div class="pane pane--like-this-innovation pane--favorite-this">
+<div class="pane pane--favorite-this">
   <h2 class="pane__title">Like This Innovation?
     <p>
       Add it to your favorites.
