--- a/patternlab/source/_patterns/01-molecules/04-panes/featured-assets@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/featured-assets@inprogress.mustache
@@ -1,4 +1,4 @@
-<div class="pane--featured-assets-featured-assets-browser">
+<div class="pane">
   <div class="view view--featured-assets">
     <div class="flexslider">
       <ul class="slides">
