--- a/public/sites/all/themes/gesso/sass/partials/components/_region-meta.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_region-meta.scss
@@ -1,7 +1,7 @@
 .region-meta {
   background: $blue url(../images/geometricshape.png) no-repeat 100% 0;
   color: #fff;
-  margin: 2em 0;
+  margin: 0 0 2em 0;
   padding: 2em 0 0 0;
 
   .pane__title,
