icons and tweaks to landing page header

--- a/patternlab/public/patterns/00-atoms-10-page-elements-02-landing-page-intro/00-atoms-10-page-elements-02-landing-page-intro.mustache
+++ b/patternlab/public/patterns/00-atoms-10-page-elements-02-landing-page-intro/00-atoms-10-page-elements-02-landing-page-intro.mustache
@@ -1,4 +1,4 @@
-&lt;div class=&quot;pane pane--landing-intro&quot;&gt;
+&lt;div class=&quot;pane pane--about-introduction pane--landing-intro&quot;&gt;
   &lt;div class=&quot;pane__content&quot;&gt;
     &lt;div class=&quot;pane--landing-intro__left&quot;&gt;
       &lt;h1&gt;{{pageTitle}}&lt;/h1&gt;
