--- a/patternlab/source/_patterns/00-atoms/10-page-elements/02-landing-page-intro@inprogress.mustache
+++ b/patternlab/source/_patterns/00-atoms/10-page-elements/02-landing-page-intro@inprogress.mustache
@@ -1,4 +1,4 @@
-<div class="pane pane--landing-intro">
+<div class="pane pane--about-introduction pane--landing-intro">
   <div class="pane__content">
     <div class="pane--landing-intro__left">
       <h1>{{pageTitle}}</h1>
