--- a/patternlab/source/sass/partials/components/pane/_pane--landing-intro.scss
+++ b/patternlab/source/sass/partials/components/pane/_pane--landing-intro.scss
@@ -2,10 +2,7 @@
   @extend %clearfix;
   background: url(../images/background--path.png) no-repeat 100% 0;
   margin: 0;
-  min-height: 288px;
-  @include breakpoint(900px, $no-query: true) {
-    min-height: 300px;
-  }
+  min-height: 300px;
   padding: 25px 0 0 0;
   @include breakpoint(900px, $no-query: true) {
     padding: 50px 0 20px 0;
@@ -26,7 +23,34 @@
     line-height: 1.2;
     margin: 0;
     padding: 0 0 0.4em 0;
+    position: relative;
     text-transform: uppercase;
+    &:before {
+      @include image-replace(46px,46px);
+      @include svg-background(icon-innovations-46);
+      content: "";
+      display: block;
+      left: -50px;
+      position: absolute;
+      top: 6px;
+    }
+  }
+  &.pane--about-introduction h1:before {
+    @include svg-background(icon-about-46);
+  }
+  &.pane--innovations-introduction h1:before {
+    @include svg-background(icon-innovations-46);
+    width: 34px;
+  }
+  &.pane--funding-introduction h1:before {
+    @include svg-background(icon-funding-46);
+  }
+  &.pane--communities-introduction h1:before {
+    @include svg-background(icon-communities-46);
+    width: 54px;
+  }
+  &.pane--more-introduction h1:before {
+    @include svg-background(icon-more-46);
   }
 }
 
