--- a/public/sites/all/themes/gesso/sass/partials/components/_stats.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_stats.scss
@@ -1,4 +1,4 @@
-.innovation-stats {
+.stats {
   background: $gray;
   border: 0;
   overflow: hidden;
@@ -15,6 +15,8 @@
     padding: 0 0 1em 0;
     .field-label {
       float: left;
+      font-weight: normal;
+      max-width: 13em;
       width: 45%;
     }
     .field-items {
@@ -38,7 +40,7 @@
    
 }
 
-.innovation-stats__first {
+.stats__first {
   @include breakpoint(900px, $no-query: true) {
     float: left;
     padding-right: 4%;
@@ -46,7 +48,7 @@
   }
 }
 
-.innovation-stats__second {
+.stats__second {
   @include breakpoint(900px, $no-query: true) {
     float: left;
     padding-left: 4%;
