added homepage layout and fixed landing page layout

--- a/patternlab/source/_patterns/02-organisms/01-content-types/02-innovation@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/01-content-types/02-innovation@inprogress.mustache
@@ -13,7 +13,7 @@
       {{{ body }}}
     </div>
     <aside class="l-main-sidebar">
-      {{> molecules-favorite-innovation }}
+      {{> molecules-favorite-this }}
     </aside>
   </div>
   <div class="l-center layout-constrain">
