--- a/patternlab/public/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.mustache
+++ b/patternlab/public/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.mustache
@@ -13,7 +13,7 @@
       {{{ body }}}
     &lt;/div&gt;
     &lt;aside class=&quot;l-main-sidebar&quot;&gt;
-      {{&gt; molecules-favorite-innovation }}
+      {{&gt; molecules-favorite-this }}
     &lt;/aside&gt;
   &lt;/div&gt;
   &lt;div class=&quot;l-center layout-constrain&quot;&gt;
