--- a/patternlab/source/_patterns/01-molecules/04-panes/favorite-this@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/favorite-this@inprogress.mustache
@@ -1,5 +1,5 @@
 <div class="pane pane--favorite-this">
-  <h2 class="pane__title">Like This Innovation?
+  <h2 class="pane__title">Like This {{ contentType }}?
     <p>
       Add it to your favorites.
     </p>
