--- a/public/sites/all/themes/gesso/sass/partials/components/_pane.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_pane.scss
@@ -1,5 +1,6 @@
 .pane {
-  padding: 0 0 2em 0;
+  margin: 0 0 2em 0;
+  padding: 0;
 }
 
 .pane__title {
@@ -14,7 +15,7 @@
     color: $lightblue;
   }
 
-  .pane--node > & {
+  .pane--full-content > & {
     color: $orange;
     font-size: em($font-size-xxl);
     @include breakpoint(550px, $no-query: true) {
