--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--nodefield-innovation-desc.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--nodefield-innovation-desc.scss
@@ -1,4 +1,4 @@
 // innovation detail page top description pane
 .pane--nodefield-innovation-desc {
-  padding-bottom: 1em;
+  margin-bottom: 1em;
 }
