--- a/patternlab/source/sass/partials/components/_stats.scss
+++ b/patternlab/source/sass/partials/components/_stats.scss
@@ -12,7 +12,8 @@
   .field {
     @include hyphens(none);
     font-size: em(14px);
-    padding: 0 0 1em 0;
+    line-height: 1.3;
+    padding: 0 0 1.5em 0;
     .field-label {
       float: left;
       font-weight: normal;
