--- a/public/sites/all/themes/gesso/patternlab/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
+++ b/public/sites/all/themes/gesso/patternlab/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
@@ -2,8 +2,28 @@
 {{&gt; organisms-navigation }}
 
 &lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot;&gt;
-	&lt;div class=&quot;region-content layout-constrain&quot;&gt;
-  	&lt;p&gt;Homepage content goes here&amp;hellip;&lt;/p&gt;
+	&lt;div class=&quot;region-content&quot;&gt;
+    &lt;div class=&quot;l-panels-home hero content villain postscript&quot;&gt;
+      &lt;div class=&quot;l-hero&quot;&gt;
+         {{&gt; molecules-homepage-header }}
+      &lt;/div&gt;
+      &lt;div class=&quot;l-content&quot;&gt;
+        &lt;div class=&quot;layout-constrain&quot;&gt;
+          {{&gt; molecules-homepage-views-personas-pane }}
+          {{&gt; molecules-homepage-views-action-card-panes }}
+          {{&gt; molecules-homepage-views-staff-picks-pane }}
+          {{&gt; molecules-homepage-views-funding-pane }}
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class=&quot;l-villain&quot;&gt;
+         {{&gt; molecules-homepage-footer-callout }}
+      &lt;/div&gt;
+      &lt;div class=&quot;l-postscript&quot;&gt;
+        &lt;div class=&quot;layout-constrain&quot;&gt;
+          {{&gt; molecules-homepage-join-callout }}
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
 &lt;/main&gt;
 
