--- a/patternlab/source/_patterns/02-organisms/02-view-modes/03-organization-teaser@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/02-view-modes/03-organization-teaser@inprogress.mustache
@@ -7,7 +7,7 @@
     <div>{{{ summary }}}</div>
     <div class="card__counts">
       <div class="view">
-        <div class="has-icon--comment">12</div>
+        <div class="has-icon--innovation">12</div>
       </div>
       <div class="view">
         <div class="has-icon--member">5</div>
