--- a/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-02-view-modes-03-organization-teaser/02-organisms-02-view-modes-03-organization-teaser.mustache
+++ b/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-02-view-modes-03-organization-teaser/02-organisms-02-view-modes-03-organization-teaser.mustache
@@ -7,7 +7,7 @@
     &lt;div&gt;{{{ summary }}}&lt;/div&gt;
     &lt;div class=&quot;card__counts&quot;&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--comment&quot;&gt;12&lt;/div&gt;
+        &lt;div class=&quot;has-icon--innovation&quot;&gt;12&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
         &lt;div class=&quot;has-icon--member&quot;&gt;5&lt;/div&gt;
