--- a/patternlab/source/_patterns/01-molecules/04-panes/_homepage-footer-callout@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/_homepage-footer-callout@inprogress.mustache
@@ -1,5 +1,7 @@
 <div class="pane pane--homepage-footer-callout">
-  <h2 class="pane__title"></h2>  
   <div class="pane__content">
+    <h1>The Exchange Mission</h1>
+    <p>Users and Partners of the Exchange will communicate, collaborate and share in order to offer the best ideas the greatest opportunities to succeed. Our goal is to streamline and optimize the approach to international development.</p>
+    <div><a href="#" class="button">Learn more</a></div>
   </div>
 </div>
