--- a/patternlab/source/_patterns/01-molecules/04-panes/_homepage-header@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/_homepage-header@inprogress.mustache
@@ -1,5 +1,7 @@
 <div class="pane pane--homepage-header">
-  <h2 class="pane__title"></h2>  
   <div class="pane__content">
+    <h1>You have the power to change the world</h1>
+    <p>The Exchange can help</p>
+    <p><a href="#" class="button">Join the community</a></p>
   </div>
 </div>
