--- a/patternlab/source/_patterns/01-molecules/04-panes/_homepage-join-callout@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/_homepage-join-callout@inprogress.mustache
@@ -1,5 +1,6 @@
-<div class="pane pane--homepage-join-callout">
-  <h2 class="pane__title"></h2>  
+<div class="pane pane--homepage-join-callout">    
   <div class="pane__content">
+    <h1>Ready to get started?</h1>
+    <p><a href="#" class="button button--highlight button--large">Join the community</a></p>
   </div>
 </div>
