--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--homepage-views-action-card-panes.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--homepage-views-action-card-panes.scss
@@ -1,10 +1,5 @@
 .pane--homepage-views-action-card-panes {
   .pane__title {
-    border: 0;
-    font-size: em(40px);
-    font-weight: 300;
-    margin: 0 0 1em 0;
-    padding: 0;
-    text-align: center;
+    @extend %pane__title--homepage;
   }
 }
