homepage section styling

--- a/patternlab/source/sass/partials/components/pane/_pane--homepage-views-action-card-panes.scss
+++ b/patternlab/source/sass/partials/components/pane/_pane--homepage-views-action-card-panes.scss
@@ -1,4 +1,5 @@
 .pane--homepage-views-action-card-panes {
+  margin: 0 0 4em 0;
   .pane__title {
     @extend %pane__title--homepage;
     text-align: center;
