--- a/patternlab/source/sass/partials/base/_html-elements.scss
+++ b/patternlab/source/sass/partials/base/_html-elements.scss
@@ -61,6 +61,9 @@ blockquote {
 
 body {
   background-color: $body-color;
+  &.front {
+    background-color: $gray;
+  }
   color: $primary-text-color;
   word-wrap: break-word;
 }
