--- a/public/sites/all/themes/gesso/sass/partials/components/_card.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_card.scss
@@ -1,8 +1,14 @@
 .card {
+  background: #fff;
   border: 1px solid $card-border-color;
   @include box-shadow(0 2px 0 0 $card-border-color);
+  margin: 0 auto;
   max-width: 500px;
   position: relative;
+}
+
+.card--button {
+  text-align: center;
 }
 
 .card__type {
@@ -16,6 +22,9 @@
 
 .card__content {
   padding: 16px 16px 66px 16px; // extra bottom space for icons
+  .card--button & {
+    padding-bottom: 100px; // extra space for button;
+  }
 }
 
 .card__title {
@@ -71,6 +80,20 @@
   font-weight: bold;
 }
 
+.card__button {
+  bottom: 10px;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  a {
+    @extend %button;
+    @extend %button--highlight;
+    @extend %button--large;
+  }
+}
+
 %cardicon {
   content: "";
   display: block;
@@ -81,8 +104,8 @@
 }
 
 .card__counts {
-  left: 0;
   bottom: 10px;
+  left: 0;
   overflow: hidden;
   padding: 0 8%;
   position: absolute;
