--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--homepage-footer-callout.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--homepage-footer-callout.scss
@@ -71,15 +71,7 @@
         }
       }
       .button {
-        background: #fff;
-        border: 0;
-        color: $orange;
-        margin-bottom: 0;
-        opacity: 0.75;
-        text-transform: uppercase;
-        &:hover, &:focus {
-          opacity: 1;
-        }
+        @extend %button--white;
       }
     }
   }
