--- a/public/sites/all/themes/gesso/css/panels-admin/home.css
+++ b/public/sites/all/themes/gesso/css/panels-admin/home.css
@@ -9,7 +9,7 @@
 }
 /* line 16, ../../sass/partials/layout/panels/_home.scss */
 .l-panels-home .l-hero,
-.l-panels-home .l-content,
+.l-panels-home .l-main,
 .l-panels-home .l-villain,
 .l-panels-home .l-postscript {
   -webkit-box-sizing: border-box;
@@ -18,7 +18,7 @@
 }
 /* line 9, ../../sass/partials/global/helpers/_clearfix.scss */
 .l-panels-home .l-hero:after,
-.l-panels-home .l-content:after,
+.l-panels-home .l-main:after,
 .l-panels-home .l-villain:after,
 .l-panels-home .l-postscript:after {
   display: table;
@@ -26,7 +26,7 @@
 }
 /* line 14, ../../sass/partials/global/helpers/_clearfix.scss */
 .l-panels-home .l-hero:after,
-.l-panels-home .l-content:after,
+.l-panels-home .l-main:after,
 .l-panels-home .l-villain:after,
 .l-panels-home .l-postscript:after {
   clear: both;
