--- a/public/sites/all/themes/gesso/sass/partials/layout/panels/_home.scss
+++ b/public/sites/all/themes/gesso/sass/partials/layout/panels/_home.scss
@@ -11,7 +11,7 @@
 .l-panels-home {
   @include clearfix;
   .l-hero,
-  .l-content,
+  .l-main,
   .l-villain,
   .l-postscript {
     @include clearfix;
