homepage card styling

--- a/patternlab/source/_patterns/01-molecules/04-panes/_homepage-views-funding-pane@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/_homepage-views-funding-pane@inprogress.mustache
@@ -1,5 +1,18 @@
 <div class="pane pane--homepage-views-funding-pane">
-  <h2 class="pane__title"></h2>  
   <div class="pane__content">
+    <div class="view view--homepage-views view--card-view-four-columns">
+      <div class="view__header">
+        <h1 class="view__header-title">Funding Opportunities</h1>
+        <a href="#" class="view__header-link">View All Funding</a>
+        <a class="button button--highlight button--large button--add view__header-button" href="#">Add Funding</a> 
+      </div>    
+      <div class="view__content">   
+        {{# listItems.four }}
+          <div class="views-row">
+            {{> organisms-funding-op-teaser }}
+          </div>
+        {{/ listItems.four }}
+      </div>
+    </div>
   </div>
 </div>
