small tweak for tabs

--- a/patternlab/source/sass/partials/components/_quicktabs-tabs.scss
+++ b/patternlab/source/sass/partials/components/_quicktabs-tabs.scss
@@ -28,8 +28,7 @@
       padding: 1em 0;
       text-align: center;
       text-decoration: none;
-      &:hover, &:focus,
-      &.active {
+      &:hover, &:focus {
         background: $orange;
         color: #fff;
         text-decoration: none;
